// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal CSS API centered 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined pb7-ns mb5"
      >
        Foo
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal CSS API default 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined pb7-ns mb5"
      >
        Foo
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal CSS API responsiveFullScreen true 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined h-100 h-auto-ns vw-100"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined  pb7-ns mb5"
      >
        Foo
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal CSS API showBottomBarBorder false 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined pb7-ns mb5"
      >
        Foo
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal CSS API showTopBar false 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined pb7-ns mb5"
      >
        Foo
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal bottomBar should render bottomBar 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined mb3"
      >
        Foo
      </div>
      <div
        class="flex justify-content flex-row-reverse min-h-regular-ns min-h-small pv6-ns ph8-ns pv7 ph7 mt3 bt b--muted-4"
      >
        <div>
          <div>
            Bar
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal container should render modal inside it 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined pb7-ns mb5"
      >
        Foo
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal isOpen Should show modal when isOpen is true and hide when is false 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined pb7-ns mb5"
      >
        Foo
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal isOpen Should show modal when isOpen is true and hide when is false 2`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined pb7-ns mb5"
      >
        Foo
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal title should render title prop 1`] = `
<DocumentFragment>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-heading-4 ml8-ns ml7 mb5"
        >
          <div
            class="undefined"
            id="vtex-modal__title"
          >
            modal title
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined pb7-ns mb5"
      >
        Foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;
